tests/snapshots/snapshots__effect_strategy_manifest.snap
---
source: tests/snapshots.rs
expression: "lines.join(\"\\n\")"
---
examples/arena.pr: state-fusion
examples/async.pr: state-fusion
examples/async_capability.pr: state-fusion
examples/calc.pr: state-fusion
examples/capabilities.pr: state-fusion
examples/channels.pr: state-fusion
examples/chaos_swarm.pr: state-fusion
examples/cli.pr: state-fusion
examples/clock.pr: state-fusion
examples/comprehension.pr: state-fusion
examples/condition.pr: state-fusion
examples/delim.pr: state-fusion
examples/durable.pr: state-fusion
examples/echo.pr: state-fusion
examples/eff_amb.pr: state-fusion
examples/eff_exn.pr: state-fusion
examples/eff_forward.pr: state-fusion
examples/eff_nontail.pr: state-fusion
examples/eff_poly.pr: state-fusion
examples/eff_reader.pr: state-fusion
examples/eff_rows.pr: state-fusion
examples/eff_state.pr: state-fusion
examples/eff_writer.pr: state-fusion
examples/eff_yield.pr: state-fusion
examples/effectful_traverse.pr: state-fusion
examples/errors.pr: state-fusion
examples/exceptions.pr: state-fusion
examples/game.pr: state-fusion
examples/greet.pr: state-fusion
examples/handlers_funval.pr: state-fusion
examples/hangman.pr: state-fusion
examples/incr_trace.pr: whole-program-free-monad
examples/incr_warm.pr: whole-program-free-monad
examples/indexing.pr: state-fusion
examples/interaction.pr: state-fusion
examples/interp.pr: state-fusion
examples/lambda.pr: state-fusion
examples/leaderboard.pr: whole-program-free-monad
examples/life.pr: state-fusion
examples/mask.pr: whole-program-free-monad
examples/memo.pr: state-fusion
examples/moore.pr: state-fusion
examples/named_handlers.pr: state-fusion
examples/optics.pr: state-fusion
examples/optionals.pr: state-fusion
examples/orders.pr: state-fusion
examples/os.pr: state-fusion
examples/param_effects.pr: state-fusion
examples/parse_dont_validate.pr: state-fusion
examples/pipeline.pr: state-fusion
examples/player_manual.pr: state-fusion
examples/proptest.pr: state-fusion
examples/protocol_ladder.pr: state-fusion
examples/queens.pr: state-fusion
examples/record_replay.pr: state-fusion
examples/replay_concurrent.pr: state-fusion
examples/same_fringe.pr: state-fusion
examples/sandbox.pr: state-fusion
examples/scheduler.pr: state-fusion
examples/scheduler_policy.pr: state-fusion
examples/stlc.pr: state-fusion
examples/streams.pr: state-fusion
examples/systemf.pr: state-fusion
examples/systemf_dk.pr: state-fusion
examples/tensor_ops.pr: state-fusion
examples/time.pr: state-fusion
examples/transact.pr: state-fusion
examples/validate.pr: state-fusion
examples/var_pure.pr: state-fusion
tests/cases/adapter_open_result_row.pr: whole-program-free-monad
tests/cases/annot_effect_unused.pr: state-fusion
tests/cases/effect_rows.pr: state-fusion
tests/cases/effects.pr: state-fusion
tests/cases/errors_unhandled.pr: state-fusion
tests/cases/fail_unhandled.pr: state-fusion
tests/cases/fip_budget.pr: whole-program-free-monad
tests/cases/higher_eff.pr: state-fusion
tests/cases/mask_tunnels_to_outer.pr: whole-program-free-monad
tests/cases/multishot.pr: state-fusion
tests/cases/run/adapter_observation.pr: state-fusion
tests/cases/run/arena_mixed.pr: state-fusion
tests/cases/run/cancel_await.pr: state-fusion
tests/cases/run/cancel_completed.pr: state-fusion
tests/cases/run/cancel_finalizer.pr: state-fusion
tests/cases/run/cancel_grandchild.pr: state-fusion
tests/cases/run/cancel_idempotent.pr: state-fusion
tests/cases/run/cancel_sibling_fail.pr: state-fusion
tests/cases/run/class_effects.pr: state-fusion
tests/cases/run/combine_effects.pr: state-fusion
tests/cases/run/comp_guard_dispatch.pr: state-fusion
tests/cases/run/comp_guards.pr: state-fusion
tests/cases/run/comp_in_annotated_row.pr: state-fusion
tests/cases/run/comp_map_once.pr: state-fusion
tests/cases/run/constrained_mutual.pr: state-fusion
tests/cases/run/control_effects.pr: state-fusion
tests/cases/run/control_validate.pr: state-fusion
tests/cases/run/curry_effect.pr: state-fusion
tests/cases/run/deep_effect_recursion.pr: state-fusion
tests/cases/run/default_or.pr: state-fusion
tests/cases/run/deriving_json.pr: state-fusion
tests/cases/run/deriving_plate.pr: state-fusion
tests/cases/run/eff_closure_arg.pr: state-fusion
tests/cases/run/eff_eta_thunk.pr: state-fusion
tests/cases/run/eff_fn_list.pr: state-fusion
tests/cases/run/eff_fuse.pr: state-fusion
tests/cases/run/eff_pending_arg.pr: state-fusion
tests/cases/run/eff_poly_fn_arg.pr: state-fusion
tests/cases/run/eff_poly_handler_install.pr: state-fusion
tests/cases/run/eff_row_forward.pr: state-fusion
tests/cases/run/eff_row_unwitnessed.pr: state-fusion
tests/cases/run/eff_two_handlers.pr: state-fusion
tests/cases/run/effop_tax.pr: state-fusion
tests/cases/run/errors.pr: state-fusion
tests/cases/run/evidence_residual_row_after_handle.pr: state-fusion
tests/cases/run/evidence_residual_row_clause.pr: state-fusion
tests/cases/run/fail_guard.pr: state-fusion
tests/cases/run/final_ctl.pr: state-fusion
tests/cases/run/flat_array.pr: state-fusion
tests/cases/run/fold_chains.pr: state-fusion
tests/cases/run/for_blocks.pr: state-fusion
tests/cases/run/for_break.pr: state-fusion
tests/cases/run/forward.pr: state-fusion
tests/cases/run/frozen_array.pr: state-fusion
tests/cases/run/fs.pr: state-fusion
tests/cases/run/fs_bytes.pr: state-fusion
tests/cases/run/grade_ops.pr: state-fusion
tests/cases/run/handler_arms_answer_apart.pr: state-fusion
tests/cases/run/handler_funval.pr: state-fusion
tests/cases/run/handler_implicit_return.pr: state-fusion
tests/cases/run/handler_partial_forward.pr: state-fusion
tests/cases/run/incr_diff.pr: whole-program-free-monad
tests/cases/run/indexing_ops.pr: state-fusion
tests/cases/run/interp_effects.pr: state-fusion
tests/cases/run/interp_show.pr: state-fusion
tests/cases/run/intmap.pr: state-fusion
tests/cases/run/law_fail.pr: state-fusion
tests/cases/run/law_names.pr: state-fusion
tests/cases/run/law_reader.pr: state-fusion
tests/cases/run/law_state.pr: state-fusion
tests/cases/run/law_ufp.pr: state-fusion
tests/cases/run/local_mono_combined.pr: state-fusion
tests/cases/run/local_mono_effectful_helper.pr: state-fusion
tests/cases/run/local_mono_escape.pr: state-fusion
tests/cases/run/local_mono_multishot.pr: state-fusion
tests/cases/run/local_mono_nontail_effect.pr: state-fusion
tests/cases/run/local_mono_nontail_resume.pr: state-fusion
tests/cases/run/local_mono_state_rest.pr: state-fusion
tests/cases/run/local_mono_two_entries.pr: state-fusion
tests/cases/run/mask.pr: whole-program-free-monad
tests/cases/run/multishot_thunk_param.pr: state-fusion
tests/cases/run/named_handlers.pr: state-fusion
tests/cases/run/nursery_name_collision.pr: state-fusion
tests/cases/run/open_nontail.pr: state-fusion
tests/cases/run/opt_chain.pr: state-fusion
tests/cases/run/optic_lens.pr: state-fusion
tests/cases/run/optic_solver.pr: state-fusion
tests/cases/run/optics_index.pr: state-fusion
tests/cases/run/optics_index_effect.pr: state-fusion
tests/cases/run/optics_read.pr: state-fusion
tests/cases/run/ordered_wire_stopgap.pr: state-fusion
tests/cases/run/param_eff.pr: state-fusion
tests/cases/run/path_lit.pr: state-fusion
tests/cases/run/path_sugar.pr: state-fusion
tests/cases/run/quickcheck_detect.pr: state-fusion
tests/cases/run/read_bad_utf8.pr: state-fusion
tests/cases/run/reified_under_world.pr: state-fusion
tests/cases/run/replayable_ok.pr: state-fusion
tests/cases/run/rewrite_strategies.pr: state-fusion
tests/cases/run/rollback.pr: state-fusion
tests/cases/run/row_widen_named_effect_list.pr: state-fusion
tests/cases/run/row_widen_task_list.pr: state-fusion
tests/cases/run/row_widen_user_effect.pr: state-fusion
tests/cases/run/scc_effect_row.pr: state-fusion
tests/cases/run/sequence_with_handler.pr: state-fusion
tests/cases/run/stable_ladder.pr: state-fusion
tests/cases/run/stable_migrations.pr: state-fusion
tests/cases/run/stream_take.pr: state-fusion
tests/cases/run/streams_edge.pr: state-fusion
tests/cases/run/sugar_if.pr: state-fusion
tests/cases/run/syntax_hostile.pr: state-fusion
tests/cases/run/syntax_walk.pr: state-fusion
tests/cases/run/teleport.pr: state-fusion
tests/cases/run/tensor.pr: state-fusion
tests/cases/run/thunk_effect_absorb.pr: state-fusion
tests/cases/run/trmc_under_multishot.pr: state-fusion
tests/cases/run/tuple_eq_ord.pr: state-fusion
tests/cases/run/var_in_handler.pr: state-fusion
tests/cases/run/var_under_handlers.pr: state-fusion
tests/cases/run/vec_head.pr: state-fusion
tests/cases/run/while_state.pr: state-fusion
tests/cases/run/wire_hostile.pr: state-fusion
tests/cases/run/wire_laws.pr: state-fusion
tests/cases/run/with_handler.pr: state-fusion
tests/cases/streams_forin.pr: state-fusion
