tests/snapshots/snapshots__interpreter@accum.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/accum.pr
---
1275
6765
1024
=> ()
