tests/snapshots/snapshots__interpreter@adapter_observation.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/adapter_observation.pr
---
50
0
42
=> ()
