tests/snapshots/snapshots__interpreter@annot.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/annot.pr
---
3
[]
42
=> ()
