tests/snapshots/snapshots__interpreter@arena_mixed.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/arena_mixed.pr
---
79
=> ()
