tests/snapshots/snapshots__interpreter@array_value_semantics.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/array_value_semantics.pr
---
0
99
=> ()
