tests/snapshots/snapshots__interpreter@big_drop.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/big_drop.pr
---
1
=> ()
