tests/snapshots/snapshots__interpreter@big_show_overflow.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/big_show_overflow.pr
---
6021
3577510519869570675234892321663406309376
=> ()
