tests/snapshots/snapshots__interpreter@bignum.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/bignum.pr
---
99999999999999999999999
100000000000000000000000
9999999999999999999999800000000000000000000001
-99999999999999999999999
0
14285714285714285714285
4
-3
-1
-3
1
3
-1
1
1
1
Some(123456789012345678901234567890)
Some(-42)
Some(17)
None
None
-123456789012345678901234567890
265252859812191058636308480000000
=> ()
